@@ -6,10 +6,13 @@ DESKTOP = duicontrolpanel.desktop
 PREFIX =
 POSTFIX =
 
+# This can enable the outprocess applets by default:
+# POSTFIX = "-outprocess"
+
 # this config can add that software mode gets used by default
 # in case dcp gets run through shell script / dbus / its icon
 SOFTWARE {
-    POSTFIX += -software
+    POSTFIX += "-software"
 }
 
 # this controls whether dcp is launched with applauncherd or not:
